# ask_the_map

./: .gitignore  README.md  environment.yml  pyproject.toml
src/ask_the_map/scripts/: build_embeddings.py  download_models.py  make_map.py  search_interactive.py
src/ask_the_map/utils/: __init__.py  load_data_communimap.py  load_model.py  model_registry.py  retrieval_metrics.py
